--- a/CoinChecker/ListCell.xib
+++ b/CoinChecker/ListCell.xib
@@ -18,9 +18,15 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sHK-cE-eLL">
+                        <rect key="frame" x="18" y="6" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="sHK-cE-eLL" secondAttribute="height" multiplier="1:1" id="u6C-O8-9Ms"/>
+                        </constraints>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bitcoin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rcJ-Bc-zcx">
                         <rect key="frame" x="58" y="11" width="52.5" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -33,12 +39,6 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sHK-cE-eLL">
-                        <rect key="frame" x="18" y="6" width="30" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="sHK-cE-eLL" secondAttribute="height" multiplier="1:1" id="u6C-O8-9Ms"/>
-                        </constraints>
-                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="rcJ-Bc-zcx" firstAttribute="leading" secondItem="sHK-cE-eLL" secondAttribute="trailing" constant="10" id="Axy-En-7mG"/>
@@ -53,6 +53,11 @@
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="seT-eF-mrR" secondAttribute="trailing" constant="10" id="4cS-kq-Con"/>
             </constraints>
+            <connections>
+                <outlet property="coinImageView" destination="sHK-cE-eLL" id="f91-RH-5XI"/>
+                <outlet property="nameLabel" destination="rcJ-Bc-zcx" id="kcH-O0-Rky"/>
+                <outlet property="priceLabel" destination="seT-eF-mrR" id="fs3-55-Ir3"/>
+            </connections>
         </tableViewCell>
     </objects>
 </document>
